--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
         font-size: 50px;
         color: whitesmoke;
         display: flex;
-        justify-content: space-between;
       }
 
       .navbar {
@@ -49,7 +48,10 @@
         display: flex;
         justify-content: space-around;
         padding-top: 18px;
-        gap: 30rem;
+        gap: 20rem;
+        position: fixed;
+        z-index: 1;
+        width: 100%;
       }
 
       .name {
@@ -57,8 +59,9 @@
         font-family: "Parisienne", cursive;
         font-weight: 400;
         font-style: normal;
-        font-size: 33px;
+        font-size: 40px;
         padding-left: 55px;
+        margin-top: -7px;
       }
 
       .nav-element ul li {
@@ -94,6 +97,7 @@
         right: 8rem;
         top: 11rem;
         border-radius: 10px;
+        margin-left: 12rem;
       }
 
       .purple {
@@ -154,7 +158,7 @@
         margin-left: 6.5rem;
       }
 
-      .portfolio-desc,
+      .portfolio-section,
       .contact-section {
         background: linear-gradient(
           180deg,
@@ -162,6 +166,7 @@
           rgb(61 50 84) 87%
         );
         height: 100vh;
+        color: whitesmoke;
       }
       .porfolio-heading {
         padding-left: 6.5rem;
@@ -173,9 +178,14 @@
         margin-bottom: 20px;
       }
       .Experience-desc,
-      .contact-desc {
+      .contact-desc,
+      .portfolio-desc {
         font-size: 16px;
         color: whitesmoke;
+      }
+      .portfolio-desc {
+        padding-left: 6.5rem;
+        margin: 40px 0 15px 2px;
       }
       #box {
         background-color: whitesmoke;
@@ -213,6 +223,13 @@
       .contact-section {
         padding-left: 105px;
       }
+
+      .portfolio-container {
+        display: flex;
+        justify-content: space-evenly;
+        padding-left: 6.5rem;
+        margin: 40px 0 15px 2px;
+      }
     </style>
   </head>
 
@@ -222,16 +239,16 @@
         <div class="name">Himansh's Portfolio</div>
         <div class="nav-element">
           <ul class="elements">
-            <li><a href="/">Home</a></li>
-            <li><a href="/">About</a></li>
-            <li><a href="/">Portfolio</a></li>
-            <li><a href="/">Experience</a></li>
-            <li><a href="/">Contact</a></li>
+            <li><a href="#top-section">Home</a></li>
+            <li><a href="#my-desc">About</a></li>
+            <li><a href="#portfolio-section">Portfolio</a></li>
+            <li><a href="#experience-section">Experience</a></li>
+            <li><a href="#contact-section">Contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
-    <section class="top-section">
+    <section id="top-section" class="top-section">
       <div class="left">
         <div class="desc">
           Hi, My name is <span class="purple"> Himanshu Vats</span>
@@ -244,7 +261,7 @@
       </div>
     </section>
 
-    <section class="my-desc">
+    <section id="my-desc" class="my-desc">
       <div class="about-heading">About</div>
       <div class="about">
         <div class="underline"></div>
@@ -263,11 +280,23 @@
       </div>
     </section>
 
-    <section class="portfolio-desc">
+    <section id="portfolio-section" class="portfolio-section">
       <div class="porfolio-heading">Portfolio</div>
       <div class="underline-portfolio"></div>
+      <div class="portfolio-desc">Check out some of my work right here</div>
+      <div class="portfolio-container">
+        <div class="pokemon-img">
+          <img class="mt-5" src="pokemon.png" alt="pokemon-image" />
+          <button
+            class="border rounded px-5 border-violet-400 transition duration-150 ease-in-out..."
+          >
+            Demo
+          </button>
+          <button class="border rounded px-5 border-violet-400">Code</button>
+        </div>
+      </div>
     </section>
-    <section class="experience-section">
+    <section id="experience-section" class="experience-section">
       <div class="Experience-heading">Experience</div>
       <div class="Experience-underline"></div>
 
@@ -352,7 +381,7 @@
       </div>
     </section>
 
-    <section class="contact-section">
+    <section id="contact-section" class="contact-section">
       <div class="contact-heading">Contact</div>
       <div class="contact-underline"></div>
       <div class="contact-desc">
