--- a/index.html
+++ b/index.html
@@ -287,12 +287,17 @@
       <div class="portfolio-container">
         <div class="pokemon-img">
           <img class="mt-5" src="pokemon.png" alt="pokemon-image" />
+          <div></div>
           <button
-            class="border rounded px-5 border-violet-400 transition duration-150 ease-in-out..."
+            class="text-white bg-gradient-to-b from-cyan-500 to-blue-500 px-6 py-3 my-8 mx-auto flex items-center rounded-md hover:scale-110 duration-300"
           >
             Demo
           </button>
-          <button class="border rounded px-5 border-violet-400">Code</button>
+          <button
+            class="text-white bg-gradient-to-b from-cyan-500 to-blue-500 px-6 py-3 my-8 mx-auto flex items-center rounded-md hover:scale-110 duration-300"
+          >
+            Code
+          </button>
         </div>
       </div>
     </section>
